5.1.9 -> 5.1.10:
    - jbj: reserve ~1K in  RPMSIGTAG_PADDING for now.
    - jbj: add RPMSIGTAG_PADDING to force metadata header alignment in file.
    - rse: align semantics of Lua function rpm.hostname() with the C API function buildHost()

5.1.8 -> 5.1.9:
    - rse: fix release tarball rolling after recent addition of local copies of XZ, PCRE and Syck

5.1.7 -> 5.1.8:
    - jbj: adjust loader maps for lua.
    - rse: fix building under all combinations (none/internal/external) of Lua and PCRE
    - rse: upgrade devtool.conf and INSTALL to the latest tools from HEAD
    - jbj: EVRtuple: eliminate the old EVR parser.
    - jbj: yarn: convert rpmluav to usage mutex with refcounts
    - jbj: yarn: convert rpmlua to usage mutex with refcounts
    - jbj: popt: remove retrofits for popt < 1.14. use popt internal if needed.
    - jbj: mire: teardown for platpat on exit needs to be done in order.
    - jbj: rpmwget: move to tools.
    - jbj: rpmio: more random line noise reduction, diff'ing against HEAD.
    - jbj: rpmio: backport HTTP transport from HEAD.
    - jbj: rpmio: add additional data elements for HTTP transport.
    - jbj: rpmiob: yet another place to use rpmiobSlurp instead.
    - jbj: backport rpmspecdump from HEAD.
    - jbj: lib: more random line noise reduction, diff'ing against HEAD.
    - jbj: delete ancient header+payload RSA signatures too using GPG (#488953).
    - jbj: rpmrepo: compile in queryformat strings.
    - jbj: install/use deb:{md5sums,preinst,postinst,prerm,postrm} queryformats.
    - jbj: install/use yum:{primary,filelists,other}.sqlite queryformats.
    - jbj: install/use yum:{primary,filelists,other}.xml queryformats.
    - jbj: install/use wnh:{primary,filelists,other}.yaml queryformats.
    - jbj: use poptReadFile with retrofit for popt < 1.15.
    - devzero2000: fix --orphandirs port alias ; add --danglinglink popt alias
    - jbj: fix: eliminate a argvSplit() memory leak.