@@ -1251,6 +1251,57 @@ exit:
     xx = headerDel(h, he, 0);
 }
 
+static uint32_t getDigestAlgo(Header h, int isSrc)
+	/*@modifies h @*/
+{
+    HE_t he = memset(alloca(sizeof(*he)), 0, sizeof(*he));
+    static uint32_t source_file_dalgo = 0;
+    static uint32_t binary_file_dalgo = 0;
+    static int oneshot = 0;
+    uint32_t dalgo = 0;
+    int xx;
+
+    if (!oneshot) {
+	source_file_dalgo =
+		rpmExpandNumeric("%{?_build_source_file_digest_algo}");
+	binary_file_dalgo =
+		rpmExpandNumeric("%{?_build_binary_file_digest_algo}");
+	oneshot++;
+    }
+
+    dalgo = (isSrc ? source_file_dalgo : binary_file_dalgo);
+    switch (dalgo) {
+    case PGPHASHALGO_SHA1:
+    case PGPHASHALGO_MD2:
+    case PGPHASHALGO_SHA256:
+    case PGPHASHALGO_SHA384:
+    case PGPHASHALGO_SHA512:
+	(void) rpmlibNeedsFeature(h, "FileDigests", "4.6.0-1");
+	he->tag = RPMTAG_FILEDIGESTALGO;
+	he->t = RPM_UINT32_TYPE;
+	he->p.ui32p = &dalgo;
+	he->c = 1;
+	xx = headerPut(h, he, 0);
+	/*@fallthgrough@*/
+    case PGPHASHALGO_RIPEMD160:
+    case PGPHASHALGO_TIGER192:
+    case PGPHASHALGO_MD4:
+    case PGPHASHALGO_RIPEMD128:
+    case PGPHASHALGO_CRC32:
+    case PGPHASHALGO_ADLER32:
+    case PGPHASHALGO_CRC64:
+	(void) rpmlibNeedsFeature(h, "FileDigestParameterized", "4.4.6-1");
+	    /*@switchbreak@*/ break;
+    case PGPHASHALGO_MD5:
+    case PGPHASHALGO_HAVAL_5_160:		/* XXX unimplemented */
+    default:
+	dalgo = PGPHASHALGO_MD5;
+	/*@switchbreak@*/ break;
+    }
+
+    return dalgo;
+}
+
 /**
  * Add file entries to header.
  * @todo Should directories have %doc/%config attributes? (#14531)
@@ -1278,6 +1329,7 @@ static void genCpioListAndHeader(/*@partial@*/ FileList fl,
     const char * sxfn;
     size_t fnlen;
     FileListRec flp;
+    uint32_t dalgo = getDigestAlgo(h, isSrc);
     char buf[BUFSIZ];
     int i, xx;
     
@@ -1456,42 +1508,6 @@ static void genCpioListAndHeader(/*@partial@*/ FileList fl,
 	xx = headerPut(h, he, 0);
 	he->append = 0;
 
-      { static uint32_t source_file_dalgo = 0;
-	static uint32_t binary_file_dalgo = 0;
-	static int oneshot = 0;
-	uint32_t dalgo = 0;
-
-	if (!oneshot) {
-	    source_file_dalgo =
-		rpmExpandNumeric("%{?_build_source_file_digest_algo}");
-	    binary_file_dalgo =
-		rpmExpandNumeric("%{?_build_binary_file_digest_algo}");
-	    oneshot++;
-	}
-
-	dalgo = (isSrc ? source_file_dalgo : binary_file_dalgo);
-	switch (dalgo) {
-	case PGPHASHALGO_SHA1:
-	case PGPHASHALGO_RIPEMD160:
-	case PGPHASHALGO_MD2:
-	case PGPHASHALGO_TIGER192:
-	case PGPHASHALGO_SHA256:
-	case PGPHASHALGO_SHA384:
-	case PGPHASHALGO_SHA512:
-	case PGPHASHALGO_MD4:
-	case PGPHASHALGO_RIPEMD128:
-	case PGPHASHALGO_CRC32:
-	case PGPHASHALGO_ADLER32:
-	case PGPHASHALGO_CRC64:
-	    (void) rpmlibNeedsFeature(h, "FileDigestParameterized", "4.4.6-1");
-	    /*@switchbreak@*/ break;
-	case PGPHASHALGO_MD5:
-	case PGPHASHALGO_HAVAL_5_160:		/* XXX unimplemented */
-	default:
-	    dalgo = PGPHASHALGO_MD5;
-	    /*@switchbreak@*/ break;
-	}
-	    
 	buf[0] = '\0';
 	if (S_ISREG(flp->fl_mode))
 	    (void) dodigest(dalgo, flp->diskURL, (unsigned char *)buf, 1, NULL);
@@ -1515,7 +1531,6 @@ if (!(_rpmbuildFlags & 4)) {
 	xx = headerPut(h, he, 0);
 	he->append = 0;
 }
-      }
 	
 	buf[0] = '\0';
 	if (S_ISLNK(flp->fl_mode)) {
