@@ -971,7 +971,8 @@ print (t)\
 #
 %_dependency_whiteout_caos_core		\
 	glibc-common>glibc		\
-	glibc>nscd
+	glibc>nscd			\
+	filesystem>setup
 
 %_dependency_whiteout			\
 	%{?_dependency_whiteout_caos_core} \
